--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<body bgcolor="DFE5FF">
+  	<h1 style="text-align:center;font-family:'Trebuchet MS', sans-serif;">My name is Timmy Ren </h1>
+ 	<h2 style="text-align:center;font-family:'Trebuchet MS', sans-serif;">Welcome to my Website! </h2>
+ <center>
+ 	<img src="Thats me!.jpg" width="265" height="266" align="BOTTOM"/>
+ </center>
+ <br></br>
+ 	<h1 style="text-align:center;font-family:'Trebuchet MS', sans-serif; font-style:bold;> align="center"=""> About Me </h1>
+ 	<p style="text-align:center;font-family:'Trebuchet MS', sans-serif;font-size:16px"> 
+Despite my confusing shirt, I am a freshman at the University of Texas at Austin as an Unspecified Business Major and hoping to achieve a degree in Business Analytics. I was born in Plano, TX (which is about three and a half hours north of Austin) and grew up with my parents and older sibling, Zen. I enjoy cooking, watching movies, and archery (which I did competitively before COVID hit). 
+	</p>
+<br></br>
+	<h1 style="text-align:center;font-family:'Trebuchet MS', sans-serif; font-style:bold;> align="center"=""> My Favorite Website </h1>
+	<p style="text-align: center;font-family:heiti sc;"><a href="https://bongo.cat/">Click Here</a> to go to my favorite site!</p>
+
 </body>
 </html>
